[project]
name = "homey-backups"
version = "0.1.0"
description = "Backup, restore, and visualise Homey Pro devices, flows, zones and variables"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-slugify>=8.0",
    "inquirer>=3.4",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.4"]

[project.scripts]
homey-backup = "backup:main"
homey-restore = "restore:main"
homey-flow-svg = "homey_flow_svg:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]
