[project]
name = "homey-backups"
version = "0.3.5"
description = "Backup, restore, and visualise Homey Pro devices, flows, zones and variables"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-slugify>=8.0",
    "inquirer>=3.4",
]

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
dev = ["pytest>=8.0", "pytest-cov>=7.1.0", "pytest-mock>=3.14", "ruff>=0.4"]

[project.scripts]
homey-backup = "backup:main"
homey-restore = "restore:main"
render-flows = "render_flows:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.setuptools]
py-modules = ["backup", "restore"]
packages = ["render_flows"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["backup", "restore", "render_flows"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "tests/htmlcov"
